# Tampal

./: .gitignore  DESIGN.adoc  Tampal.code-workspace
Servlet/: .gitignore  BUILD  WORKSPACE
Servlet/data/: html.txt
Servlet/src/main/java/my/huda/tampal/: ExampleServlet.java  StartJettyWebserver.java
Springboot_App/: .gitignore  BUILD.bazel  WORKSPACE.bazel  pom.xml
Springboot_App/src/main/java/my/huda/tampal/: CoreApplication.java
Springboot_App/src/main/java/my/huda/tampal/client/: GRPCClient.java
Springboot_App/src/main/java/my/huda/tampal/config/: ApiConfig.java
Springboot_App/src/main/java/my/huda/tampal/controllers/: GrpcController.java  HttpController.java  ServletController.java
Springboot_App/src/main/java/my/huda/tampal/service/: TampalService.java
Springboot_App/src/main/resources/: application.yml  tampal.proto
Springboot_App/src/main/resources/templates/: display-paste.html  login.html  register.html  user-page.html
Tampal_Frontend/Tampal-Lit/: .gitignore  LICENSE  index.html  login.html  package-lock.json  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
Tampal_Frontend/Tampal-Lit/src/: RootApp.ts
Tampal_Frontend/Tampal-Lit/src/components/: display-paste.ts  index.ts  login-screen.ts  pastes-list.ts  register-screen.ts  user-profile.ts
Tampal_Frontend/Tampal-Lit/src/css/: alerts.ts  core.ts  form-fields.ts  index.ts  paste-display.ts  table-styles.ts
Tampal_Frontend/Tampal-Lit/src/models/: Paste.ts
