load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "tampal_proto",
    srcs = ["src/main/resources/tampal.proto"],
)

java_proto_library(
    name = "tampal_java_proto",
    deps = [":tampal_proto"],
)

java_grpc_library(
    name = "tampal_java_grpc",
    srcs = ["tampal_proto"],
    deps = [
        ":tampal_java_proto",
    ],
)

java_binary(
    name = "tampal_server",
    main_class = "my.huda.tampal.CoreApplication",
    resources = glob([
        "src/main/resources/*.yml",
        "src/main/resources/static/js/dist/**/*.js",
        "src/main/resources/static/js/dist/**/*.js.map",
        "src/main/resources/templates/*.html",
        "src/main/data/users/*.txt",
        "src/main/data/users/**/**/*.txt",
    ]),
    runtime_deps = [":tampal"],
)

java_binary(
    name = "tampal_client",
    main_class = "my.huda.tampal.client.GRPCClient",
    runtime_deps = [":tampal"],
)

java_library(
    name = "tampal",
    srcs = glob([
        "src/main/java/my/huda/tampal/**/*.java",
    ]),
    runtime_deps = [
        "@maven//:io_grpc_grpc_core",
    ],
    deps = [
        ":tampal_java_grpc",
        ":tampal_java_proto",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:io_github_lognet_grpc_spring_boot_starter",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:io_netty_netty_transport_native_unix_common",
        "@maven//:io_perfmark_perfmark_api",
        "@maven//:jakarta_servlet_jakarta_servlet_api",
        "@maven//:javax_javaee_api",
        "@maven//:org_apache_tomcat_annotations_api",
        "@maven//:org_eclipse_jetty_jetty_server",
        "@maven//:org_eclipse_jetty_jetty_servlet",
        "@maven//:org_eclipse_jgit_org_eclipse_jgit",
        "@maven//:org_projectlombok_lombok",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter",
        "@maven//:org_springframework_boot_spring_boot_starter_parent",
        "@maven//:org_springframework_boot_spring_boot_starter_thymeleaf",
        "@maven//:org_springframework_boot_spring_boot_starter_tomcat",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_spring_webmvc",
    ],
)
