load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

GRPC_JAVA_TAG = "1.50.2"

GRPC_JAVA_SHA = "9eca289bcc59511a1e22e556c9b460ba9c05129662395af4431f472b642a6220"

http_archive(
    name = "io_grpc_grpc_java",
    sha256 = GRPC_JAVA_SHA,
    strip_prefix = "grpc-java-%s" % GRPC_JAVA_TAG,
    url = "https://github.com/grpc/grpc-java/archive/v%s.zip" % GRPC_JAVA_TAG,
)

RULES_JVM_EXTERNAL_TAG = "4.2"

RULES_JVM_EXTERNAL_SHA = "cd1a77b7b02e8e008439ca76fd34f5b07aecb8c752961f9640dea15e9e5ba1ca"

http_archive(
    name = "rules_jvm_external",
    sha256 = RULES_JVM_EXTERNAL_SHA,
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_TAG,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:repositories.bzl", "rules_jvm_external_deps")

rules_jvm_external_deps()

load("@rules_jvm_external//:setup.bzl", "rules_jvm_external_setup")

rules_jvm_external_setup()

load("@rules_jvm_external//:defs.bzl", "maven_install")
load("@io_grpc_grpc_java//:repositories.bzl", "IO_GRPC_GRPC_JAVA_ARTIFACTS")
load("@io_grpc_grpc_java//:repositories.bzl", "IO_GRPC_GRPC_JAVA_OVERRIDE_TARGETS")
load("@io_grpc_grpc_java//:repositories.bzl", "grpc_java_repositories")

grpc_java_repositories()

load("@com_google_protobuf//:protobuf_deps.bzl", "PROTOBUF_MAVEN_ARTIFACTS")
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

maven_install(
    artifacts = [
        "org.springframework.boot:spring-boot-starter-parent:2.7.5",
        "org.springframework.boot:spring-boot-starter-tomcat:2.7.5",
        "org.springframework.boot:spring-boot:2.7.5",
        "org.springframework.boot:spring-boot-autoconfigure:2.7.5",
        "org.springframework.boot:spring-boot-starter-web:2.7.5",
        "org.springframework:spring-web:5.3.23",
        "org.springframework:spring-context:5.3.23",
        "org.springframework:spring-beans:5.3.23",
        "org.springframework:spring-core:5.3.23",
        "org.projectlombok:lombok:1.18.24",
        "org.apache.tomcat:annotations-api:6.0.53",
        "org.eclipse.jetty:jetty-server:11.0.12",
        "org.eclipse.jetty:jetty-servlet:11.0.12",
        "javax:javaee-api:8.0.1",
        "jakarta.servlet:jakarta.servlet-api:5.0.0",
        "io.github.lognet:grpc-spring-boot-starter:3.3.0",
        "io.grpc:grpc-core:1.21.0",
        "io.grpc:grpc-stub:1.21.0",
        "io.grpc:grpc-services:1.21.0",
        "io.grpc:grpc-api:1.21.0",
        "io.perfmark:perfmark-api:0.23.0",
        "io.netty:netty-buffer:4.1.79.Final",
        "io.netty:netty-codec-http:4.1.79.Final",
        "io.netty:netty-codec-socks:4.1.79.Final",
        "io.netty:netty-codec:4.1.79.Final",
        "io.netty:netty-common:4.1.79.Final",
        "io.netty:netty-handler-proxy:4.1.79.Final",
        "io.netty:netty-handler:4.1.79.Final",
        "io.netty:netty-resolver:4.1.79.Final",
        "io.netty:netty-tcnative-boringssl-static:2.0.54.Final",
        "io.netty:netty-tcnative-classes:2.0.54.Final",
        "io.netty:netty-transport-native-epoll:jar:linux-x86_64:4.1.79.Final",
        "io.netty:netty-transport-native-unix-common:4.1.79.Final",
        "io.netty:netty-transport:4.1.79.Final",
        "com.google.protobuf:protobuf-java:3.21.7",
        "com.google.guava:guava:31.1-jre",
        "com.google.android:annotations:4.1.1.4",
        "com.google.j2objc:j2objc-annotations:1.3",
        "com.google.auto.value:auto-value-annotations:1.9",
        "com.google.api.grpc:proto-google-common-protos:2.9.0",
    ] + PROTOBUF_MAVEN_ARTIFACTS,
    generate_compat_repositories = True,
    override_targets = IO_GRPC_GRPC_JAVA_OVERRIDE_TARGETS,
    repositories = [
        "https://repo.maven.apache.org/maven2/",
    ],
)

load("@maven//:compat.bzl", "compat_repositories")

compat_repositories()
